--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 
 \documentclass[final]{IEEEtran}
+!TEX program = xelatex
 %\documentclass{article}
 %\usepackage{fullpage}
 \usepackage{amsmath, amssymb}
